no commit message

--- a/myclouds-admin-web/src/main/resources/static/css/myclouds.css
+++ b/myclouds-admin-web/src/main/resources/static/css/myclouds.css
@@ -9,7 +9,7 @@ label.required {
     
 }
 label.required:before {
-    color: #E9573F;
+    color: #E63F24;
     content: '* ';
     display:inline;
 }
