--- a/myclouds-admin-web/src/main/resources/templates/fragments/scripts.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/scripts.html
@@ -8,7 +8,8 @@
 	<script src="/theme/vendor/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
 	<script src="/theme/vendor/plugins/datatables/i18n/chinese.js"></script>
 	<script src="/theme/vendor/plugins/select2/select2.min.js"></script>
-	<script type="text/javascript" src="/theme/vendor/plugins/magnific/jquery.magnific-popup.js"></script>
+	<script src="/theme/vendor/plugins/magnific/jquery.magnific-popup.js"></script>
+	<script src="/theme/vendor/plugins/pnotify/pnotify.js"></script>
 	<script src="/js/myclouds.js"></script>
 	<!-- END: PAGE SCRIPTS -->
 </div>
