no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/param.html
@@ -60,7 +60,7 @@
 						<button class="btn btn-default btn-gradient btn-sm ph15" type="button">
 							<span class="glyphicon glyphicon-repeat"></span> 重置
 						</button>
-						<a href="#" class="btn btn-primary mb10 mr5 notification" data-note-stack="stack_top_right" data-note-style="success">Top Left</a>
+
 					</div>
 				</div>
 
@@ -176,97 +176,6 @@
 			});
 			/******* 事件监听.end ********/
 
-			// A "stack" controls the direction and position
-			// of a notification. Here we create an array w
-			// with several custom stacks that we use later
-			var Stacks = {
-				stack_top_right : {
-					"dir1" : "down",
-					"dir2" : "left",
-					"push" : "top",
-					"spacing1" : 10,
-					"spacing2" : 10
-				},
-				stack_top_left : {
-					"dir1" : "down",
-					"dir2" : "right",
-					"push" : "top",
-					"spacing1" : 10,
-					"spacing2" : 10
-				},
-				stack_bottom_left : {
-					"dir1" : "right",
-					"dir2" : "up",
-					"push" : "top",
-					"spacing1" : 10,
-					"spacing2" : 10
-				},
-				stack_bottom_right : {
-					"dir1" : "left",
-					"dir2" : "up",
-					"push" : "top",
-					"spacing1" : 10,
-					"spacing2" : 10
-				},
-				stack_bar_top : {
-					"dir1" : "down",
-					"dir2" : "right",
-					"push" : "top",
-					"spacing1" : 0,
-					"spacing2" : 0
-				},
-				stack_bar_bottom : {
-					"dir1" : "up",
-					"dir2" : "right",
-					"spacing1" : 0,
-					"spacing2" : 0
-				},
-				stack_context : {
-					"dir1" : "down",
-					"dir2" : "left",
-					"context" : $("#stack-context")
-				},
-			}
-
-			// PNotify Plugin Event Init
-			$('.notification').on('click', function(e) {
-				var noteStyle = $(this).data('note-style');
-				var noteShadow = $(this).data('note-shadow');
-				var noteOpacity = $(this).data('note-opacity');
-				var noteStack = $(this).data('note-stack');
-				var width = "290px";
-
-				// If notification stack or opacity is not defined set a default
-				var noteStack = noteStack ? noteStack : "stack_top_right";
-				var noteOpacity = noteOpacity ? noteOpacity : "1";
-
-				// We modify the width option if the selected stack is a fullwidth style
-				function findWidth() {
-					if (noteStack == "stack_bar_top") {
-						return "100%";
-					}
-					if (noteStack == "stack_bar_bottom") {
-						return "70%";
-					} else {
-						return "290px";
-					}
-				}
-
-				// Create new Notification
-				new PNotify({
-					title : '提示',
-					text : '键值参数保存成功!',
-					shadow : noteShadow,
-					type : 'danger',
-					//stack : Stacks[noteStack],
-					stack : Stacks['stack_top_right'],
-					//width : findWidth(),
-					width : '50%',
-					delay : 1000
-				});
-
-			});
-
 			//初始化下拉框
 			$(".basic-single").select2({
 				placeholder : "请选择...",
@@ -323,7 +232,7 @@
 					url : 'save',
 					data : My.params('#fo_add_param'),
 					success : function(data) {
-						console.log(data);
+						My.notify(data.name);
 						My.close();
 						queryParams();
 					}
