--- a/myclouds-admin-web/src/main/resources/templates/fragments/head.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/head.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <link rel='stylesheet' type='text/css' href='/theme/assets/skin/default_skin/css/googlefont.css' />
+<link rel='stylesheet' type='text/css' href='/theme/assets/fonts/glyphicons-pro/glyphicons-pro.css' />
 <link rel="stylesheet" type="text/css" href="/theme/assets/skin/default_skin/css/theme.css" />
 <link rel="stylesheet" type="text/css" href="/theme/assets/admin-tools/admin-forms/css/admin-forms.css" />
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/magnific/magnific-popup.css" />
