no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/param.html
@@ -224,9 +224,9 @@
 													targets : [ 6 ],//动作列
 													width : 50,
 													data : {},
-													render : function(data, type, full) {
+													render : function(row, type, full) {
 														var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='delParam("
-																+ data.id + ")'>删除</button></div>";
+																+ JSON.stringify(row) + ")'>删除</button></div>";
 														return html;
 													}
 												} ],
@@ -301,15 +301,13 @@
 						});
 
 		//删除参数
-		function delParam(id) {
-			My.confirm('确认删除当前键值参数吗?', function(result) {
+		function delParam(row) {
+			My.confirm('确认删除当前键值参数吗？', function(result) {
 				if (result) {
 					$.ajax({
 						type : 'post',
 						url : 'delete',
-						data : {
-							id : id
-						},
+						data : row,
 						success : function(data) {
 							My.notify(data.msg);
 							queryParams();
